--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,75 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lobster&display=swap');
+
+:root {
+  --main-color: #3778c2;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: 'Figtree', sans-serif;
+  margin: 0;
+}
+
+body {
+  display: grid;
+  place-items: center;
+  background: whitesmoke;
+}
+
+main {
+  width: 375px;
+  height: 100vh;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+section {
+  width: 100%;
+  height: 100%;
+  background: var(--main-color);
+  color: #fff;
+}
+
+.home {
+  display: grid;
+  grid-template-rows: 85% 10%;
+}
+
+.home h1 {
+  font-size: 2em;
+  font-family: 'Lobster', cursive;
+  font-weight: normal;
+  text-align: center;
+  line-height: 20;
+}
+
+.btn-group {
+  display: grid;
+  place-items: center;
+}
+
+.log-btn {
+  display: inline-block;
+  width: 80%;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  padding: 15px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 3px 0;
+}
+
+.log-btn:first-child {
+  background: #fff;
+  color: var(--main-color);
+  border: 1px solid var(--main-color);
+}
+
+.log-btn:hover {
+  font-weight: bold;
+  border-width: 2px;
+}
+
+.log-btn:active {
+  transform: translateY(3px);
+}
