--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,7 +4,7 @@
         <%= link_to category_money_transactions_path(category) do%>
             <h2><%= category.name %></h2>
             <%= image_tag category.icon ,width:'50px', height:'50px', class:'icon' %>
-            <p>Total amount: <%= category.money_transactions.sum(:amount)%></p>
+            <p>Total amount: <%= category.money_transactions.sum(:amount)%> $</p>
         <% end %>
     <% end %>
 
