--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,12 +1,18 @@
 <section class='category'>
-    <h1>Categories</h1>
+    <%= render partial:'shared/nav', locals:{title:'Categories', url:categories_path}%>
+    <% if @categories.empty? %>
+        <h2 class='empty'> There is no category yet! </h2>
+    <% else %>
     <% @categories.each do |category|%>
-        <%= link_to category_money_transactions_path(category) do%>
-            <h2><%= category.name %></h2>
+        <%= link_to category_money_transactions_path(category),class:'cat-link' do%>
             <%= image_tag category.icon ,width:'50px', height:'50px', class:'icon' %>
-            <p>Total amount: <%= category.money_transactions.sum(:amount)%> $</p>
+            <div class='cat-info'>
+                <h2><%= category.name %></h2>
+                <small>Total amount: <%= category.money_transactions.sum(:amount)%> $</small>
+            </div>
         <% end %>
     <% end %>
+    <% end %>
 
-    <%= link_to '+ New Category', new_category_path, class:'log-btn'%>
+    <%= link_to '+ New Category', new_category_path, class:'btn'%>
 </section>
