--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Forgot your password?</h2>
+<section class='devise-container'>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+  <div class='nav'>
+    <%= link_to "🡨",home_path, class:'back'%>
+    <h2>Forgot your password?</h2>
+    <span></span>
+  </div>
+
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email,placeholder:'Email', autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password instructions" ,class: 'log-btn'%>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class='log-links'>
+    <%= render "devise/shared/links"%>
+  </div>
+</section>
