--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,16 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<section class='devise-container'>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class='nav'>
+    <%= link_to "🡨",home_path, class:'nav-arrow'%>
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+    <div class="actions">
+      <%= f.submit "Update" %>
+    </div>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -31,9 +40,7 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+  
 <% end %>
 
 <h3>Cancel my account</h3>
@@ -41,3 +48,5 @@
 <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
 <%= link_to "Back", :back %>
+
+</section>
