--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
-<h2>Sign up</h2>
+<section class='devise-container'>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    <div class='nav'>
+      <%= link_to "🡨",home_path, class:'back'%>
+      <h2>Sign up</h2>
+      <span></span>
+    </div>
+
+    <div class="field">
+      <%= f.text_field :name, placeholder:'Name', autofocus: true, autocomplete: "name" %>
+    </div>
+
+    <div class="field">
+      <%= f.email_field :email, placeholder:'Email', autofocus: true, autocomplete: "email" %>
+    </div>
+
+    <div class="field">
+      <% if @minimum_password_length %>
+      <%= f.password_field :password, placeholder:"Password(#{@minimum_password_length} characters minimum)" ,autocomplete: "new-password" %>
+      
+      <% end %>
+    </div>
+
+    <div class="field">
+      <%= f.password_field :password_confirmation, placeholder:'Confirmed password', autocomplete: "new-password" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Sign up", class: 'log-btn' %>
+    </div>
+  <% end %>
+
+  <div class='log-links'>
+    <%= render "devise/shared/links"%>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
