--- a/app/views/money_transactions/new.html.erb
+++ b/app/views/money_transactions/new.html.erb
@@ -10,6 +10,7 @@
 <% end %>
 
 <section class='form'>
+    <%= render partial:'shared/nav', locals:{title:'New Transaction', url:category_money_transactions_path(@category)}%>
     <%= form_with model:@transaction, url:category_money_transactions_path(@category), method: :post do |f| %>
         <div class='form-group'>
             <%= f.label :name%>
@@ -22,6 +23,7 @@
         </div>
 
         <div class="form-group">
+            <%= f.label :categories_ids, 'Category'%>
             <%= f.collection_check_boxes :category_ids, Category.all, :id, :name  do |b| %>
                 <% checked = b.text == @category.name %>
                 <%= b.label { b.check_box(checked: checked) + b.text } %>
@@ -31,9 +33,7 @@
         <%= f.hidden_field :category_id, value: @category.id %>  
 
         <div class="actions">
-            <%= f.submit "Submit" %>
+            <%= f.submit "Submit", class:'log-btn'%>
         </div>
     <% end %>
-    
-    <%= link_to 'Back to Transactions', category_money_transactions_path(@category)%>
 </section>
