--- a/app/views/money_transactions/new.html.erb
+++ b/app/views/money_transactions/new.html.erb
@@ -24,7 +24,7 @@
 
         <div class="form-group">
             <%= f.label :categories_ids, 'Category'%>
-            <%= f.collection_check_boxes :category_ids, Category.all, :id, :name  do |b| %>
+            <%= f.collection_check_boxes :category_ids, Category.includes(:user).where(id: current_user.id), :id, :name  do |b| %>
                 <% checked = b.text == @category.name %>
                 <%= b.label { b.check_box(checked: checked) + b.text } %>
             <% end %>
